# live-demo

./: .pre-commit-config.yaml  LICENSE  README.md  setup.cfg  setup.py  tox.ini
src/live_demo/: __init__.py  _reader.py  _widget.py  _writer.py  napari.yml
src/live_demo/_tests/: test_reader.py  test_widget.py  test_writer.py
